--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
+  max-width:100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html{
+  scroll-behavior: smooth;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+a{
+  text-decoration:none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width:100%;
+  max-width:100%;
+  background-color: #0D0D0D;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #595959;
+  height:15vh;
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:100;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-main{
+  margin:0px;
+  padding:0px;
+  background-color:#0D0D0D;
+  position:absolute;
+  top:15vh;
+  left:0;
+  min-height:85vh;
+  max-width:100%;
+  width:100%;
 }
