--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,13 +9,22 @@
     flex-direction:column;
 }
 #about-me-text{
+    width:50%;
+    padding-left:2%;
+    padding-right:2%;
+    margin:0px;
+    margin-top:22vh;
     text-align:left;
-    margin:17vh 5vw;
-    margin-bottom:auto;
-    color:#D9D9D9;
-    font-size:calc(1vw + 10px);
-    line-height:calc(2vw + 15px);
+    color:rgba(217, 217, 217, 0.8);
+    font-size:calc(1vw + 2px);
+    line-height:calc(1vw + 5px);
+    border-right:1px solid #6C7339;
     transition:all .1s ease-in;
+}
+.about-container{
+    margin-bottom:auto;
+    display:flex;
+    flex-direction:row;
 }
 
 .about-top-details{
@@ -49,9 +58,25 @@
 }
 @media only screen and (max-width: 992px){
     #about-me-text{
+        width:80%;
         text-align:center;
         line-break: strict;
-        margin:17vh 10vw;
-        margin-bottom:auto;
+        margin-bottom:0px;
+        margin-top:20vh;
+        margin-left:10%;
+        border-bottom:1px solid #6C7339;
+        border-right:0px;
+        font-size:calc(1vw + 5px);
+        letter-spacing:.1vh;
+        line-height:calc(1vw + 7px);
+        height:50%;
+    }
+    .about-media-top{
+        margin-top:0px;
+        margin-bottom:2vh;
+        margin-bottom:0px;
+    }
+    .about-container{
+        flex-direction:column;
     }
 }
