--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -133,10 +133,14 @@
         font-size:calc(2vh + 5px);
     }
     .project-details-extend{
-        font-size:calc(1.5vh + 5px);
+        font-size:calc(1.5vh + 3px);
     }
     .project-details-extend span{
         font-size:calc(1.5vh + 7px);
         line-height:5vh;
+    }
+    .project-info-links-1{
+        font-size:calc(1.5vh, 3px);
+        margin-top:4vh;
     }
 }
