--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -140,7 +140,7 @@
         line-height:5vh;
     }
     .project-info-links-1{
-        font-size:calc(1.5vh, 3px);
+        font-size:calc(1.5vh +  3px);
         margin-top:4vh;
     }
 }
