--- a/src/components/LampPost/LampPost.css
+++ b/src/components/LampPost/LampPost.css
@@ -88,7 +88,7 @@
     }
     .lamppost-project-info-div img{
         width:70vw;
-        height:30vh;
+        height:27vh;
         margin:0px;
         padding:0px;
     }
@@ -98,10 +98,12 @@
     .lamppost-framework-bg img{
         height:20px;
         width:20px;
+        position:relative
     }
     .lamppost-github-link{
         font-size:5vw;
         padding:1vw;
         margin-right:0;
+        margin:0.5vw
     }
 }
