--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -111,6 +111,15 @@
     font-size:calc(2vh + 7px);
     line-height:8vh;
 }
+.project-info-links-1{
+    margin-top:auto;
+    margin:0;
+    padding:0;
+    margin-bottom:20%;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+}
 @media only screen and (max-width: 992px){
     .project-images{
         flex-direction:column;
@@ -140,7 +149,15 @@
         line-height:5vh;
     }
     .project-info-links-1{
-        font-size:calc(1.5vh +  3px);
-        margin-top:4vh;
+        font-size:calc(1.5vw +  3px);
+        margin-top:auto;
+        margin-bottom:20%;
+    }
+    .project-frameworks-div{
+        height:15%
+    }
+    .project-details-heading{
+        margin:0;
+        margin-top:1vw
     }
 }
